cambio de imagenes

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <li><a href="">CONTACTO</a></li>
             </ul>
             <div class="usuario">
-                <img class="usuarioimg" src="/images/user.png" alt="usuario">
+                <img class="usuarioimg" src="images/user.png" alt="usuario">
                 <p class="micuenta">Mi cuenta</p>
                 <p>ES</p>
-                <img class="bandera" src="/images/flag.png" alt="idioma">
-                <img class="arrow" src="/images/arrow.png" alt="buscar">
+                <img class="bandera" src="images/flag.png" alt="idioma">
+                <img class="arrow" src="images/arrow.png" alt="buscar">
             </div>
         </section>
       </header>
@@ -85,7 +85,7 @@
             <div class="contenedorBeneficios">
                 <article>
                     <div class="imagenRedonda">
-                        <img  src="/images/gold.png" alt="gold">
+                        <img  src="images/gold.png" alt="gold">
                     </div>
                     <h3>GOLD</h3>
                     <button>Ver Condiciones</button>
@@ -97,7 +97,7 @@
                 </article>
                 <article>
                     <div class="imagenRedonda">
-                        <img  src="/images/premium.png" alt="premium">
+                        <img  src="images/premium.png" alt="premium">
                     </div>
                     <h3>PREMIUM</h3>
                     <button>Ver Condiciones</button>
@@ -108,7 +108,7 @@
                 </article>
                 <article>
                     <div class="imagenRedonda" >
-                        <img src="/images/plate.png" alt="plate">
+                        <img src="images/plate.png" alt="plate">
                     </div>
                     <h3>PLATE</h3>
                     <button>Ver Condiciones</button>
@@ -130,9 +130,9 @@
             <div class="redes">
                 <p>Siguenos en:</p>
                 <div class="imagenesRedes">
-                    <img src="/images/rs_facebook.png" alt="facebook">
-                    <img src="/images/rs_twiter.png" alt="twitter">
-                    <img src="/images/rs_youtube.png" alt="youtube">
+                    <img src="images/rs_facebook.png" alt="facebook">
+                    <img src="images/rs_twiter.png" alt="twitter">
+                    <img src="images/rs_youtube.png" alt="youtube">
                 </div>
             </div>
 
