--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
     <footer>
         <section class="contenedorFooter">
             <nav>
-                <a href="#">Politicas de Cookies</a>
+                <a href="#">Políticas de Cookies</a>
                 <a href="#">Aviso Legal</a>
-                <a href="#">Proteccion de Datos</a>
+                <a href="#">Protección de Datos</a>
                 <a href="#">Mapa del Sitio</a>
             </nav>
             <div class="redes">
